PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46163 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -217,7 +217,7 @@ pluginwizard_modify_business_class.labelGenerateStep=G\u00e9n\u00e9ration
 pluginwizard_modify_business_class.labelAttributeName=Nom de l'attribut
 pluginwizard_modify_business_class.labelAttributeType=Type de l'attribut
 
-pluginwizard_modify_business_class.labelCreateAttribute=Cr\u00e9er un attribut
+pluginwizard_modify_business_class.labelCreateAttribute=Ajouter un attribut
 pluginwizard_modify_business_class.labelModifyttribute=Modifier un attribut
 pluginwizard_modify_business_class.labelDeleteAttribute=Effacer un attribut
 pluginwizard_modify_business_class.labelFielsetAttributes=Attributs de la classe m\u00e9tier
@@ -242,7 +242,7 @@ pluginwizard_manage_business_classes.labelBusinessTableAttributes=Attributs
 pluginwizard_manage_business_classes.helpBusinessTableAttributes=Les attributs sont les champs de la classe m\u00e9tier 
 pluginwizard_manage_business_classes.buttonBack=Etape pr\u00e9c\u00e9dente
 pluginwizard_manage_business_classes.buttonNext=Etape suivante
-pluginwizard_manage_business_classes.buttonAddBusinessClass=Ajouter classe
+pluginwizard_manage_business_classes.buttonAddBusinessClass=Ajouter une classe
 
 ###############################################################################
 #pluginwizard_manage_plugin_applications.html
@@ -250,7 +250,7 @@ pluginwizard_manage_business_classes.buttonAddBusinessClass=Ajouter classe
 pluginwizard_manage_plugin_applications.pageTitle=G\u00e9rer les XPage dans le plugin
 pluginwizard_manage_plugin_applications.buttonModifyApplication=Modifier
 pluginwizard_manage_plugin_applications.buttonRemoveApplication=Effacer
-pluginwizard_manage_plugin_applications.buttonAddApplication=Ajouter XPage
+pluginwizard_manage_plugin_applications.buttonAddApplication=Ajouter une XPage
 pluginwizard_manage_plugin_applications.buttonBack=Etape pr\u00e9c\u00e9dente
 pluginwizard_manage_plugin_applications.buttonNext=Etape suivante
 
@@ -425,33 +425,10 @@ pluginwizard_modify_portlet_feature.pageTitle=Modifier le portlet
 #pluginwizard_create_plugin_description.html
 pluginwizard_create_plugin_description.pageTitle=Ajouter la description du plugin
 pluginwizard_create_plugin_description.labelPluginName=Nom du plugin
-pluginwizard_create_plugin_description.labelPluginClass=Classe du plugin
-pluginwizard_create_plugin_description.labelPluginDescription=Description du plugin
-pluginwizard_create_plugin_description.labelPluginDocumentation=Documentation sur le plugin
-pluginwizard_create_plugin_description.labelPluginInstallation=Installation du plugin
-pluginwizard_create_plugin_description.labelPluginChanges=Changements du plugin
-pluginwizard_create_plugin_description.labelPluginUserGuide=Guide utilisateur du plugin
 pluginwizard_create_plugin_description.labelPluginVersion=Version du plugin
-pluginwizard_create_plugin_description.labelPluginCopyright=Droit d'auteur
-pluginwizard_create_plugin_description.labelPluginIconUrl=Ic\u00f4ne du plugin
-pluginwizard_create_plugin_description.labelPluginProvider=Fournisseur du plugin
+pluginwizard_create_plugin_description.labelPluginCopyright=Copyright
 pluginwizard_create_plugin_description.labelPluginProviderUrl=Url du Fournisseur
 pluginwizard_create_plugin_description.labelPlugindbPoolRequired=Base de donn\u00e9e requise
-pluginwizard_create_plugin_description.labelElementsToGenerate=El\u00e9ments \u00e0 g\u00e9n\u00e9rer
-
-pluginwizard_create_plugin_description.helpPluginName=Nom du plugin
-pluginwizard_create_plugin_description.helpPluginClass=Classe du plugin
-pluginwizard_create_plugin_description.helpPluginDescription=Description du plugin
-pluginwizard_create_plugin_description.helpPluginDocumentation=Documentation sur le plugin
-pluginwizard_create_plugin_description.helpPluginInstallation=Installation du plugin
-pluginwizard_create_plugin_description.helpPluginChanges=Changements du plugin
-pluginwizard_create_plugin_description.helpPluginUserGuide=Guide utilisateur du plugin
-pluginwizard_create_plugin_description.helpPluginVersion=Version du plugin
-pluginwizard_create_plugin_description.helpPluginCopyright=Droit d'auteur
-pluginwizard_create_plugin_description.helpPluginIconUrl=Ic\u00f4ne du plugin 
-pluginwizard_create_plugin_description.helpPluginProvider=Fournisseur du plugin
-pluginwizard_create_plugin_description.helpPluginProviderUrl=Url du Fournisseur
-pluginwizard_create_plugin_description.helpPlugindbPoolRequired=Base de donn\u00e9e requise
 
 pluginwizard_create_plugin_description.pageHelp=Les \u00e9l\u00e9ments descriptifs d'un plugin aident \u00e0 configurer la structure d'un projet de plugin de Lut\u00e8ce. Le nom du plugin a \u00e9t\u00e9 d\u00e9fini dans l'\u00e9tape de cr\u00e9ation. La classe du plugin est une classe Java. L'utilisation d'une base de donn\u00e9es par le plugin est sp\u00e9cifi\u00e9e gr\u00e2ce \u00e0 "Base de donn\u00e9es r\u00e9quise".
 pluginwizard_create_plugin_description.buttonBack=Etape pr\u00e9c\u00e9dente
@@ -461,16 +438,8 @@ pluginwizard_create_plugin_description.buttonNext=Etape suivante
 #pluginwizard_modify_plugin_description.html
 pluginwizard_modify_plugin_description.pageTitle=Modification de la description du plugin
 pluginwizard_modify_plugin_description.labelPluginName=Nom du plugin
-pluginwizard_modify_plugin_description.labelPluginClass=Classe du plugin
-pluginwizard_modify_plugin_description.labelPluginDescription=Description du plugin
-pluginwizard_modify_plugin_description.labelPluginDocumentation=Documentation sur le plugin
-pluginwizard_modify_plugin_description.labelPluginInstallation=Installation du plugin
-pluginwizard_modify_plugin_description.labelPluginChanges=Changements du plugin
-pluginwizard_modify_plugin_description.labelPluginUserGuide=Guide utilisateur du plugin
 pluginwizard_modify_plugin_description.labelPluginVersion=Version du plugin
-pluginwizard_modify_plugin_description.labelPluginCopyright=Droit d'auteur
-pluginwizard_modify_plugin_description.labelPluginIconUrl=Ic\u00f4ne du plugin 
-pluginwizard_modify_plugin_description.labelPluginProvider=Fournisseur du plugin
+pluginwizard_modify_plugin_description.labelPluginCopyright=Copyright
 pluginwizard_modify_plugin_description.labelPluginProviderUrl=Url du Fournisseur
 pluginwizard_modify_plugin_description.labelPlugindbPoolRequired=Base de donn\u00e9e requise
 pluginwizard_modify_plugin_description.labelTrue=Oui
@@ -677,7 +646,7 @@ manage_configurationkey.buttonItemsPerPage=Nombre de cl\u00e9s
 manage_configurationkeys.pageTitle=Gestion des cl\u00e9s de configuration
 manage_configurationkeys.tableLabel=table des cl\u00e9s de configuration
 
-modify_configurationkey.tableLabel=Table des cl\u00e9s de configuartions
+modify_configurationkey.tableLabel=Table des cl\u00e9s de configurations
 modify_configurationkey.rowTitleConfigurationKey=Id
 modify_configurationkey.rowTitleConfigurationValue=Valeur
 modify_configurationkey.rowTitleConfigurationDescription=Cl\u00e9
