PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46172 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -614,27 +614,19 @@ adminFeature.pluginwizard_management.description=Permet de mettre  jour les conf
 
 create_configurationkey.buttonValidate=buttonValidate
 
-modify_configurationkey.pageTitle=Modifier la cl\u00e9
-
-modify_configurationkey.tableLabel=tableLabel
-
-modify_configurationkey.rowId_key=rowId_key
-
-modify_configurationkey.rowKey_description=rowKey_description
-
-modify_configurationkey.rowKey_value=rowKey_value
-
-modify_configurationkey.buttonValidate=buttonValidate
+modify_configurationkey.pageTitle=Modification des cl\u00e9s de configuration
 
 message.confirmRemoveConfigurationkey=Confirmation de la suppression de la cl\u00e9
 
 
 pluginwizard_create_plugin_description.labelElementsToGenerate=El\u00e9ments \u00e0 g\u00e9n\u00e9rer
-create_configurationkey.tableLabel=Table des cl\u00e9s de configuartions
+
+create_configurationkey.pageTitle=Cr\u00e9ation d'une cl\u00e9 de configuration
+create_configurationkey.tableLabel=Cr\u00e9ation d'une cl\u00e9 de configuration
 create_configurationkey.rowTitleConfigurationKey=Id
 create_configurationkey.rowTitleConfigurationValue=Valeur
 create_configurationkey.rowTitleConfigurationDescription=Cl\u00e9
-create_configurationkey.buttonValidate=Cr\u00e9er une cl\u00e9
+create_configurationkey.buttonValidate=Cr\u00e9er
 
 
 manage_configurationkey.columnKey_action=Action
@@ -646,7 +638,7 @@ manage_configurationkey.buttonItemsPerPage=Nombre de cl\u00e9s
 manage_configurationkeys.pageTitle=Gestion des cl\u00e9s de configuration
 manage_configurationkeys.tableLabel=table des cl\u00e9s de configuration
 
-modify_configurationkey.tableLabel=Table des cl\u00e9s de configurations
+modify_configurationkey.tableLabel=Modifier une cl\u00e9 de configuration
 modify_configurationkey.rowTitleConfigurationKey=Id
 modify_configurationkey.rowTitleConfigurationValue=Valeur
 modify_configurationkey.rowTitleConfigurationDescription=Cl\u00e9
