PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46174 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -288,14 +288,21 @@ pluginwizard_manage_resource_keys.columnTitleFrench=Fran\u00e7ais
 
 ###############################################################################
 #pluginwizard_plugin_recapitulate.html
-pluginwizard_plugin_recapitulate.pageTitle=R\u00e9capitulatif des constituants du module
+pluginwizard_plugin_recapitulate.pageTitle=R\u00e9capitulatif et g\u00e9n\u00e9ration des sources du plugin
 pluginwizard_plugin_recapitulate.buttonBack=Etape pr\u00e9c\u00e9dente
-pluginwizard_plugin_recapitulate.labelSummary=Sommaire du module
-pluginwizard_plugin_recapitulate.labelXPages=Les XPage du module
-pluginwizard_plugin_recapitulate.labelPortlets=Les portlets du module
-pluginwizard_plugin_recapitulate.labelAdminFeatures=Les fonctionnalit\u00e9s d'administration du module
-pluginwizard_plugin_recapitulate.labelBusinessClasses=Les classes m\u00e9tiers
-pluginwizard_plugin_recapitulate.buttonGenerate=G\u00e9n\u00e9rer l'archive des fichiers du module
+pluginwizard_plugin_recapitulate.labelSummary=Liste des composants g\u00e9n\u00e9r\u00e9s
+pluginwizard_plugin_recapitulate.labelXPage=XPage
+pluginwizard_plugin_recapitulate.labelPortlet=portlet
+pluginwizard_plugin_recapitulate.labelAdminFeature=fonctionnalit\u00e9 d'administration
+pluginwizard_plugin_recapitulate.labelBusinessClasse=classe m\u00e9tier(s)
+pluginwizard_plugin_recapitulate.labelXPages=XPages
+pluginwizard_plugin_recapitulate.labelPortlets=portlets
+pluginwizard_plugin_recapitulate.labelAdminFeatures=fonctionnalit\u00e9s d'administration
+pluginwizard_plugin_recapitulate.labelBusinessClasses=classes m\u00e9tiers
+pluginwizard_plugin_recapitulate.buttonGenerate=G\u00e9n\u00e9rer l'archive des sources
+pluginwizard_plugin_recapitulate.labelPluginName=Nom du plugin
+pluginwizard_plugin_recapitulate.pageHelp=Le plugin est pr\u00eat \u00e0 \u00eatre g\u00e9n\u00e9r\u00e9. Une synth\u00e8se des composants du plugin est affich\u00e9e.Le bouton "G\u00e9n\u00e9rer l'archive des sources" permet de cr\u00e9er l'archive. Le bouton "Etape pr\u00e9c\u00e9dente" permet de revenir sur les \u00e9tapes afin de modifier les renseignements du plugin.
+pluginwizard_plugin_recapitulate.alertProperties=<h4>Important ! </h4>Avant la premi\u00e8re ex\u00e9cution du plugin, vous devez finaliser les resources "texte" du plugin dans les diff\u00e9rentes langues.<br>Les fichiers se trouvent dans le r\u00e9pertoire /src/java/fr/paris/lutece/plugins/<i>monplugin</i>/resources/.
 
 
 
@@ -592,16 +599,6 @@ pluginwizard_manage_resource_keys.labelXPageStep=XPage
 pluginwizard_manage_resource_keys.labelPortletsStep=Portlets
 pluginwizard_manage_resource_keys.labelI18n=i18n
 pluginwizard_manage_resource_keys.labelGenerateStep=G\u00e9n\u00e9ration
-
-pluginwizard_plugin_recapitulate.labelCreationStep=Cr\u00e9ation
-pluginwizard_plugin_recapitulate.labelDescriptionStep=Description
-pluginwizard_plugin_recapitulate.labelFeaturesStep=Administration
-pluginwizard_plugin_recapitulate.labelBusinessStep=M\u00e9tier
-pluginwizard_plugin_recapitulate.labelXPageStep=XPage
-pluginwizard_plugin_recapitulate.labelPortletsStep=Portlets
-pluginwizard_plugin_recapitulate.labelI18n=i18n
-pluginwizard_plugin_recapitulate.labelGenerateStep=G\u00e9n\u00e9ration
-pluginwizard_plugin_recapitulate.pageHelp=Le plugin est pr\u00eat \u00e0 \u00eatre g\u00e9n\u00e9r\u00e9. Une synth\u00e8se des constituants du plugin est affich\u00e9e.Le bouton "G\u00e9n\u00e9rer l'archive des fichiers du plugin" permet de cr\u00e9er l'archive. Le bouton "Etape pr\u00e9c\u00e9dente" permet de revenir sur les \u00e9tapes afin de modifier les renseignements du plugin.
 
 #######################Configuration Back Office
 adminFeature.pluginwizard_management.name=Gestion de PluginWizard
