--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -53,7 +53,7 @@ pluginwizard_modify_attribute.pageHelp=Les attributs d'une classe Pojo sont en m
 
 ################################################################################
 # modify_plugin.html
-pluginwizard_modify_plugin.create_plugin.pageTitle=Modifier un plugin de Lutece
+pluginwizard_modify_plugin.pageTitle=Modifier le plugin 
 pluginwizard_modify_plugin.labelPluginName=Nom du plugin 
 pluginwizard_modify_plugin.buttonModifyPlugin=Modifier
 pluginwizard_modify_plugin.labelAddBusinessClasses=Les classes Java de la couche m\u00e9tier
