PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46207 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -4,8 +4,12 @@ plugin.description=Assistant de g\u00e9n\u00e9ration de plugins Lutece
 plugin.provider=La Ville de Paris
 
 ################################################################################
-pageTitle=Moteur de g\u00e9n\u00e9ration de squelette de plugins
+pageTitle=Assistant de g\u00e9n\u00e9ration de plugins Lutece
 pagePathLabel=G\u00e9n\u00e9rateur de plugins
+
+####################### Back Office features
+adminFeature.pluginwizard_management.name=Gestion de PluginWizard
+adminFeature.pluginwizard_management.description=Permet de mettre  jour les configurations actuelles afin de g\u00e9n\u00e9rer un plugin
 
 
 ################################################################################
@@ -13,16 +17,17 @@ pagePathLabel=G\u00e9n\u00e9rateur de plugins
 pluginwizard_create_plugin.create_plugin.pageTitle=Cr\u00e9er un plugin de Lutece
 pluginwizard_create_plugin.labelPluginName=Nom du plugin 
 pluginwizard_create_plugin.labelPluginNameHelp=En minuscules et compos\u00e9 uniquement de caract\u00e8res appartenant \u00e0 l'ensemble [a..z]
+pluginwizard_create_plugin.labelSummary=Cet assistant va g\u00e9n\u00e9rer les composants suivants
 pluginwizard_create_plugin.buttonCreatePlugin=Valider
 pluginwizard_create_plugin.labelAddBusinessClasses=Les classes Java de la couche m\u00e9tier
-pluginwizard_create_plugin.labelAddSqlFiles=Le script SQL d'initialisation de la base de donn\u00e9es
+pluginwizard_create_plugin.labelAddSqlFiles=Les scripts SQL de cr\u00e9ation et d'initialisation de la base de donn\u00e9es
 pluginwizard_create_plugin.labelAddJspBean=Les classes Java de la couche pr\u00e9sentation
 pluginwizard_create_plugin.labelAddBackOfficeTemplate=Les templates HTML
-pluginwizard_create_plugin.labelAddResourceFiles=Les fichiers ressources d'internalisation
-pluginwizard_create_plugin.labelAddBackOfficeJsp=Les Jsp de l'interface d'administration
+pluginwizard_create_plugin.labelAddResourceFiles=Les fichiers ressources d'internationalisation (i18n)
+pluginwizard_create_plugin.labelAddBackOfficeJsp=Les JSP de l'interface d'administration
 pluginwizard_create_plugin.labelAddPluginPropertiesFile=Le fichier properties de configuration du plugin
-pluginwizard_create_plugin.labelAddMavenPom=Le fichier pom.xml du projet
-pluginwizard_create_plugin.labelAddPluginXmlDefinition=Le fichier xml de la d\u00e9finition du plugin
+pluginwizard_create_plugin.labelAddMavenPom=Le fichier pom.xml pour construire le projet avec Maven
+pluginwizard_create_plugin.labelAddPluginXmlDefinition=Le fichier XML de d\u00e9finition du plugin
 pluginwizard_create_plugin.labelAddSpringContextXml=Le fichier de context de Spring
 pluginwizard_create_plugin.labelAddXPage=Les classes Java des XPage
 pluginwizard_create_plugin_description.labelTrue=Oui
@@ -55,16 +60,17 @@ pluginwizard_modify_attribute.pageHelp=Les attributs d'une classe Pojo sont en m
 # modify_plugin.html
 pluginwizard_modify_plugin.pageTitle=Modifier le plugin 
 pluginwizard_modify_plugin.labelPluginName=Nom du plugin 
+pluginwizard_modify_plugin.labelSummary=Cet assistant va g\u00e9n\u00e9rer les composants suivants
 pluginwizard_modify_plugin.buttonModifyPlugin=Modifier
 pluginwizard_modify_plugin.labelAddBusinessClasses=Les classes Java de la couche m\u00e9tier
-pluginwizard_modify_plugin.labelAddSqlFiles=Le script SQL d'initialisation de la base de donn\u00e9es
+pluginwizard_modify_plugin.labelAddSqlFiles=Les scripts SQL de cr\u00e9ation et d'initialisation de la base de donn\u00e9es
 pluginwizard_modify_plugin.labelAddJspBean=Les classes Java de la couche pr\u00e9sentation
 pluginwizard_modify_plugin.labelAddBackOfficeTemplate=Les templates HTML
-pluginwizard_modify_plugin.labelAddResourceFiles=Les fichiers ressources d'internalisation
-pluginwizard_modify_plugin.labelAddBackOfficeJsp=Les Jsp de l'interface d'administration
+pluginwizard_modify_plugin.labelAddResourceFiles=Les fichiers ressources d'internationalisation (i18n)
+pluginwizard_modify_plugin.labelAddBackOfficeJsp=Les JSP de l'interface d'administration
 pluginwizard_modify_plugin.labelAddPluginPropertiesFile=Le fichier properties de configuration du plugin
-pluginwizard_modify_plugin.labelAddMavenPom=Le fichier pom.xml du projet
-pluginwizard_modify_plugin.labelAddPluginXmlDefinition=Le fichier xml de la d\u00e9finition du plugin
+pluginwizard_modify_plugin.labelAddMavenPom=Le fichier pom.xml pour construire le projet avec Maven
+pluginwizard_modify_plugin.labelAddPluginXmlDefinition=Le fichier XML de d\u00e9finition du plugin
 pluginwizard_modify_plugin.labelAddSpringContextXml=Le fichier de context de Spring
 pluginwizard_modify_plugin.labelAddXPage=Les classes Java des XPage
 
@@ -119,7 +125,7 @@ pluginwizard_create_plugin_application.pageTitle=Cr\u00e9er une XPage
 pluginwizard_create_plugin_application.labelApplicationName=Nom de la XPage
 pluginwizard_create_plugin_application.labelApplicationClass=La classe de la XPage
 pluginwizard_create_plugin_application.buttonCreateApplication=Cr\u00e9er la XPage
-pluginwizard_create_plugin_application.buttonBack=Retour au Menu
+pluginwizard_create_plugin_application.buttonBack=Retour
 
 ###############################################################################
 #pluginwizard_modify_plugin_application.html
@@ -127,7 +133,7 @@ pluginwizard_modify_plugin_application.pageTitle=Modifier la XPage
 pluginwizard_modify_plugin_application.labelApplicationName=Nom de la XPage
 pluginwizard_modify_plugin_application.labelApplicationClass=La classe de la XPage
 pluginwizard_modify_plugin_application.buttonModifyApplication=Modifier la XPage
-pluginwizard_modify_plugin_application.buttonBack=Retour au Menu
+pluginwizard_modify_plugin_application.buttonBack=Retour
 
 
 
@@ -143,7 +149,7 @@ pluginwizard_create_plugin_portlet.labelPortletTypeName=Nom du type de portlet
 pluginwizard_create_plugin_portlet.labelCreationUrl=Url de cr\u00e9ation
 pluginwizard_create_plugin_portlet.labelUpdateUrl=Url de modification
 pluginwizard_create_plugin_portlet.buttonCreatePortlet=Cr\u00e9er la portlet
-pluginwizard_create_plugin_portlet.buttonBack=Retour au Menu
+pluginwizard_create_plugin_portlet.buttonBack=Retour
 
 ###############################################################################
 #pluginwizard_modify_plugin_portlet.html
@@ -153,7 +159,7 @@ pluginwizard_modify_plugin_portlet.labelPortletTypeName=Nom du type de portlet
 pluginwizard_modify_plugin_portlet.labelCreationUrl=Url de cr\u00e9ation
 pluginwizard_modify_plugin_portlet.labelUpdateUrl=Url de modification
 pluginwizard_modify_plugin_portlet.buttonModifyPortlet=Modifier la portlet
-pluginwizard_modify_plugin_portlet.buttonBack=Retour au Menu
+pluginwizard_modify_plugin_portlet.buttonBack=Retour
 pluginwizard_modify_plugin_portlet.pageHelp=Les champs n\u00e9cessaires pour la cr\u00e9ation d'un plugin sont la classe du portlet.,le nom du portlet qui doit obligatoirement finir par "_PORTLET',l'url de cr\u00e9ation qui correspond \u00e0 une JSP qui sera aussi g\u00e9n\u00e9r\u00e9 automatiquement. La modification du portlet qui sera aussi g\u00e9r\u00e9e par une JSP. Le bouton " Modifier la portlet " permet de cr\u00e9er son portlet.de donn\u00e9es r\u00e9quise".
 ###############################################################################
 #pluginwizard_manage_plugin_admin_features.html
@@ -294,7 +300,7 @@ pluginwizard_plugin_recapitulate.labelSummary=Liste des composants g\u00e9n\u00e
 pluginwizard_plugin_recapitulate.labelXPage=XPage
 pluginwizard_plugin_recapitulate.labelPortlet=portlet
 pluginwizard_plugin_recapitulate.labelAdminFeature=fonctionnalit\u00e9 d'administration
-pluginwizard_plugin_recapitulate.labelBusinessClasse=classe m\u00e9tier(s)
+pluginwizard_plugin_recapitulate.labelBusinessClasse=classe m\u00e9tier
 pluginwizard_plugin_recapitulate.labelXPages=XPages
 pluginwizard_plugin_recapitulate.labelPortlets=portlets
 pluginwizard_plugin_recapitulate.labelAdminFeatures=fonctionnalit\u00e9s d'administration
@@ -600,10 +606,6 @@ pluginwizard_manage_resource_keys.labelPortletsStep=Portlets
 pluginwizard_manage_resource_keys.labelI18n=i18n
 pluginwizard_manage_resource_keys.labelGenerateStep=G\u00e9n\u00e9ration
 
-#######################Configuration Back Office
-adminFeature.pluginwizard_management.name=Gestion de PluginWizard
-
-adminFeature.pluginwizard_management.description=Permet de mettre  jour les configurations actuelles afin de g\u00e9n\u00e9rer un plugin
 
 
 
