PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46222 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -36,6 +36,13 @@ pluginwizard_create_plugin.labelStepOf=Etape de
 pluginwizard_create_plugin.labelInformation=Information
 pluginwizard_create_plugin.pageHelp=Cet assistant permet de g\u00e9n\u00e9rer un plugin Lut\u00e8ce.Il suffit de l'adapter afin de r\u00e9pondre \u00e0 vos besoins sp\u00e9cifiques. Il y a sept \u00e9tapes comme d\u00e9crit ci-dessus. A chaque \u00e9tape des informations n\u00e9cessaires seront demand\u00e9es.A la fin de ces \u00e9tapes pluginwizard vous d\u00e9livre une archive avec tous les fichiers de configuration n\u00e9cessaires \u00e0 votre plugin.<ul><li>Le nom d'un plugin doit \u00eatre en minuscule (ex. soleil, panier, etc.. ). Les cases \u00e0 cocher permettent de choisir le type de fichier \u00e0 inclure. Si aucune case n'est choisie, tous les fichiers seront produits</li><li>Le bouton "Valider" permet de poursuivre vers l'\u00e9tape de description du plugin.</li></ul>
 
+
+###############################################################################
+#pluginwizard_plugin_exists.html
+pluginwizard_plugin_exists.alert=<h4>Attention !</h4><br/><br/>Des donn\u00e9es de g\u00e9n\u00e9ration existent d\u00e9j\u00e0 pour ce nom de plugin
+pluginwizard_plugin_exists.buttonPreserve=Conserver les donn\u00e9es
+pluginwizard_plugin_exists.buttonReset=Supprimer les donn\u00e9es
+
 ###############################################################################
 #pluginwizard_create_attribute.html
 pluginwizard_create_attribute.pageTitle=Cr\u00e9er un attribut
