PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46260 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages_fr.properties
@@ -119,12 +119,18 @@ pluginwizard_create_plugin.pageTitle=Cr\u00e9er un plugin
 #pluginwizard_create_admin_feature.html
 pluginwizard_create_admin_feature.pageTitle=Cr\u00e9er une fonctionnalit\u00e9 d'administration
 pluginwizard_create_admin_feature.create_feature_button=Cr\u00e9er la fonctionnalit\u00e9
-pluginwizard_create_admin_feature.labelFeatureManagement=G\u00e9rer les fonctionnalit\u00e9s
-pluginwizard_create_admin_feature.labelFeatureDescription=Description de la fonctionnalit\u00e9
-pluginwizard_create_admin_feature.labelFeatureLevel=Niveau de la fonctionnalit\u00e9
-pluginwizard_create_admin_feature.labelFeatureTitle=Titre de la fonctionnalit\u00e9
-pluginwizard_create_admin_feature.labelFeatureUrl=L'Url de la fonctionnalit\u00e9
+pluginwizard_create_admin_feature.labelFeatureManagement=Droit
+pluginwizard_create_admin_feature.labelFeatureDescription=Description
+pluginwizard_create_admin_feature.labelFeatureLevel=Niveau droit
+pluginwizard_create_admin_feature.labelFeatureTitle=Titre
+pluginwizard_create_admin_feature.labelFeatureName=Nom technique
+pluginwizard_create_admin_feature.labelLevel0=Niveau 0 - Droits de l'administrateur technique
+pluginwizard_create_admin_feature.labelLevel1=Niveau 1 - Droits de l'administrateur fonctionnel
+pluginwizard_create_admin_feature.labelLevel2=Niveau 2 - Droits du webmestre
+pluginwizard_create_admin_feature.labelLevel3=Niveau 3 - Droits de l'assistant webmestre
 pluginwizard_create_admin_feature.buttonCreateFeature=Cr\u00e9er la fonctionnalit\u00e9
+pluginwizard_create_admin_feature.buttonBack=Retour
+pluginwizard_create_admin_feature.pageHelp=Le droit est une cl\u00e9 qui sera en lettres capitales et d\u00e9limiter avec le mot management. Le titre et la description sont des cl\u00e9s qui seront remplac\u00e9es par du texte dans le rendu visuel. Le contenu des cl\u00e9s se trouve dans les fichiers de type (nom_du_plugin)_messages_fr.properties pour la version fran\u00e7aise. Le niveau de droit d\u00e9finit le p\u00e9rim\u00e8tre d'acc\u00e8s pour un groupe sp\u00e9cifique d'utilisateurs backoffice. Url de l'image sera l'endroit o\u00f9 l'image repr\u00e9sentera le plugin sera plac\u00e9 avant l'\u00e9xecution du plugin.  
 
 ###############################################################################
 #pluginwizard_create_plugin_application.html
@@ -176,7 +182,7 @@ pluginwizard_manage_plugin_admin_features.labelFeatureUrl=Url
 pluginwizard_manage_plugin_admin_features.labelFeatureDescription=Description de la fonctionnalit\u00e9
 pluginwizard_manage_plugin_admin_features.labelFeatureTitle= Titre
 pluginwizard_manage_plugin_admin_features.labelFeatureAction=Action
-pluginwizard_manage_plugin_admin_features.labelFeatureManagement=Gestion
+pluginwizard_manage_plugin_admin_features.labelFeatureManagement=Fonctionnalit\u00e9
 pluginwizard_manage_plugin_admin_features.buttonModifyFeature=Modifier
 pluginwizard_manage_plugin_admin_features.buttonRemoveFeature=Effacer
 pluginwizard_manage_plugin_admin_features.buttonViewFeature=Voir la fiche
@@ -211,7 +217,7 @@ pluginwizard_create_business_class.labelBusinessTableName=Nom de la table
 pluginwizard_create_business_class.labelBusinessAttributes=Attributs m\u00e9tier
 pluginwizard_create_business_class.labelAdminFeatures=Fonctionnalit\u00e9s d'administration
 pluginwizard_create_business_class.buttonCreateClass=Cr\u00e9er la classe
-pluginwizard_create_business_class.buttonBack=Retour au Menu
+pluginwizard_create_business_class.buttonBack=Retour
 
 
 
@@ -238,7 +244,7 @@ pluginwizard_modify_business_class.labelFielsetAttributes=Attributs de la classe
 
 pluginwizard_modify_business_class.labelAdminFeatures=Fonctionnalit\u00e9s d'administration
 pluginwizard_modify_business_class.buttonModifyClass=Modifier la classe
-pluginwizard_modify_business_class.buttonBack=Retour au Menu
+pluginwizard_modify_business_class.buttonBack=Retour 
 pluginwizard_modify_business_class.buttonModifyAttribute=Modifier attribut
 pluginwizard_modify_business_class.buttonRemoveAttribute=Effacer attribut
 
@@ -303,7 +309,7 @@ pluginwizard_manage_resource_keys.columnTitleFrench=Fran\u00e7ais
 #pluginwizard_plugin_recapitulate.html
 pluginwizard_plugin_recapitulate.pageTitle=R\u00e9capitulatif et g\u00e9n\u00e9ration des sources du plugin
 pluginwizard_plugin_recapitulate.buttonBack=Etape pr\u00e9c\u00e9dente
-pluginwizard_plugin_recapitulate.labelSummary=Liste des composants g\u00e9n\u00e9r\u00e9s
+pluginwizard_plugin_recapitulate.labelSummary=Liste des composants \u00e0 g\u00e9n\u00e9rer
 pluginwizard_plugin_recapitulate.labelXPage=XPage
 pluginwizard_plugin_recapitulate.labelPortlet=portlet
 pluginwizard_plugin_recapitulate.labelAdminFeature=fonctionnalit\u00e9 d'administration
@@ -324,34 +330,7 @@ pluginwizard_plugin_recapitulate.alertProperties=<h4>Important ! </h4>Avant la p
 pluginwizard_modify_application_feature.pageTitle=Modifier une XPage
 
 
-###############################################################################
-#pluginwizard_create_admin_feature.html
 
-pluginwizard_create_admin_feature.pageTitle=Cr\u00e9er une fonctionnalit\u00e9 d'administration
-pluginwizard_create_admin_feature.create_feature_button=Cr\u00e9er la fonctionnalit\u00e9
-pluginwizard_create_admin_feature.labelFeatureManagement=Gestion
-pluginwizard_create_admin_feature.labelFeatureDescription=Description
-pluginwizard_create_admin_feature.labelFeatureLevel=Niveau
-pluginwizard_create_admin_feature.labelFeatureTitle=Titre
-pluginwizard_create_admin_feature.labelFeatureUrl=Url
-
-pluginwizard_create_admin_feature.buttonBack=Retour
-
-pluginwizard_create_admin_feature.labelLevel0=Niveau 0 - Droits de l'administrateur technique
-pluginwizard_create_admin_feature.labelLevel1=Niveau 1 - Droits de l'administrateur fonctionnel
-pluginwizard_create_admin_feature.labelLevel2=Niveau 2 - Droits du webmestre
-pluginwizard_create_admin_feature.labelLevel3=Niveau 3 - Droits de l'assistant webmestre
-
-pluginwizard_create_admin_feature.labelCreationStep=Cr\u00e9ation
-pluginwizard_create_admin_feature.labelDescriptionStep=Description
-pluginwizard_create_admin_feature.labelFeaturesStep=Administration
-pluginwizard_create_admin_feature.labelBusinessStep=M\u00e9tier
-pluginwizard_create_admin_feature.labelXPageStep=XPage
-pluginwizard_create_admin_feature.labelPortletsStep=Portlets
-pluginwizard_create_admin_feature.labelI18n=i18n
-pluginwizard_create_admin_feature.labelGenerateStep=G\u00e9n\u00e9ration
-
-pluginwizard_create_admin_feature.pageHelp=La gestion est une cl\u00e9 qui sera en lettres capitales et d\u00e9limiter avec le mot management. Le titre et la description sont des cl\u00e9s qui seront remplac\u00e9es par du texte dans le rendu visuel. Le contenu des cl\u00e9s se trouve dans les fichiers de type (nom_du_plugin)_messages_fr.properties pour la version fran\u00e7aise. Le niveau de droit d\u00e9finit le p\u00e9rim\u00e8tre d'acc\u00e8s pour un groupe sp\u00e9cifique d'utilisateurs backoffice. Url de l'image sera l'endroit o\u00f9 l'image repr\u00e9sentera le plugin sera plac\u00e9 avant l'\u00e9xecution du plugin.  
 
 
 
@@ -359,11 +338,11 @@ pluginwizard_create_admin_feature.pageHelp=La gestion est une cl\u00e9 qui sera 
 #pluginwizard_modify_admin_feature.html
 pluginwizard_modify_admin_feature.pageTitle=Modifier la fonctionnalit\u00e9 d'administration
 pluginwizard_modify_admin_feature.create_feature_button=Modifier la fonctionnalit\u00e9
-pluginwizard_modify_admin_feature.labelFeatureManagement=Gestion
+pluginwizard_modify_admin_feature.labelFeatureManagement=Droit
 pluginwizard_modify_admin_feature.labelFeatureDescription=Description
 pluginwizard_modify_admin_feature.labelFeatureLevel=Niveau
 pluginwizard_modify_admin_feature.labelFeatureTitle=Titre
-pluginwizard_modify_admin_feature.labelFeatureUrl=Url
+pluginwizard_modify_admin_feature.labelFeatureName=Nom technique
 
 pluginwizard_modify_admin_feature.buttonBack=Retour
 
@@ -382,33 +361,7 @@ pluginwizard_modify_admin_feature.labelPortletsStep=Portlets
 pluginwizard_modify_admin_feature.labelI18n=i18n
 pluginwizard_modify_admin_feature.labelGenerateStep=G\u00e9n\u00e9ration
 
-pluginwizard_modify_admin_feature.pageHelp=La gestion est une cl\u00e9 qui sera en lettres capitales et d\u00e9limiter avec le mot management. Le titre et la description sont des cl\u00e9s qui seront remplac\u00e9es par du texte dans le rendu visuel. Le contenu des cl\u00e9s se trouve dans les fichiers de type (nom_du_plugin)_messages_fr.properties pour la version fran\u00e7aise. Le niveau de droit d\u00e9finit le p\u00e9rim\u00e8tre d'acc\u00e8s pour un groupe sp\u00e9cifique d'utilisateurs backoffice. Url de l'image sera l'endroit o\u00f9 l'image repr\u00e9sentera le plugin sera plac\u00e9 avant l'\u00e9xecution du plugin.
-
-
-###############################################################################
-#pluginwizard_view_admin_feature.html
-pluginwizard_view_admin_feature.pageTitle=Voir la fonctionnalit\u00e9 d'administration
-pluginwizard_view_admin_feature.create_feature_button=Modifier la fonctionnalit\u00e9
-pluginwizard_view_admin_feature.labelFeatureManagement=Gestion
-pluginwizard_view_admin_feature.labelFeatureDescription=Description
-pluginwizard_view_admin_feature.labelFeatureLevel=Niveau
-pluginwizard_view_admin_feature.labelFeatureTitle=Titre
-pluginwizard_view_admin_feature.labelFeatureUrl=Url
-pluginwizard_view_admin_feature.buttonBack=Retour
-pluginwizard_view_admin_feature.pageHelp=Les fonctionnalit\u00e9s d'administration permettent de d\u00e9clarer un ensemble de t\u00e2ches du back office auxquelles un certain type d'utilisateur aura droit. Dans le g\u00e9n\u00e9rateur la fonction d'administration des objets m\u00e9tiers est donn\u00e9e par une  fonctionnalit\u00e9 d'administration. L'interface permet d'ajouter, de modifier et de supprimer une fonctionnalit\u00e9. 
-
-pluginwizard_view_admin_feature.labelLevel0=Niveau 0 - Droits de l'administrateur technique
-pluginwizard_view_admin_feature.labelLevel1=Niveau 1 - Droits de l'administrateur fonctionnel
-pluginwizard_view_admin_feature.labelLevel2=Niveau 2 - Droits du webmestre
-pluginwizard_view_admin_feature.labelLevel3=Niveau 3 - Droits de l'assistant webmestre
-pluginwizard_view_admin_feature.labelCreationStep=Cr\u00e9ation
-pluginwizard_view_admin_feature.labelDescriptionStep=Description
-pluginwizard_view_admin_feature.labelFeaturesStep=Administration
-pluginwizard_view_admin_feature.labelBusinessStep=M\u00e9tier
-pluginwizard_view_admin_feature.labelXPageStep=XPage
-pluginwizard_view_admin_feature.labelPortletsStep=Portlets
-pluginwizard_view_admin_feature.labelI18n=i18n
-pluginwizard_view_admin_feature.labelGenerateStep=G\u00e9n\u00e9ration
+pluginwizard_modify_admin_feature.pageHelp=Le droit est une cl\u00e9 qui sera en lettres capitales et d\u00e9limiter avec le mot management. Le titre et la description sont des cl\u00e9s qui seront remplac\u00e9es par du texte dans le rendu visuel. Le contenu des cl\u00e9s se trouve dans les fichiers de type (nom_du_plugin)_messages_fr.properties pour la version fran\u00e7aise. Le niveau de droit d\u00e9finit le p\u00e9rim\u00e8tre d'acc\u00e8s pour un groupe sp\u00e9cifique d'utilisateurs backoffice. Url de l'image sera l'endroit o\u00f9 l'image repr\u00e9sentera le plugin sera plac\u00e9 avant l'\u00e9xecution du plugin.
 
 
 ###############################################################################
@@ -583,7 +536,7 @@ pluginwizard_manage_business_classes.pageHelp=La gestion des classes m\u00e9tier
 pluginwizard_modify_business_class.labelAttributeKey=Cl\u00e9
 pluginwizard_modify_business_class.labelAttributeDescription=Description
 pluginwizard_modify_business_class.labelAttributeAction=Action
-pluginwizard_modify_business_class.pageHelp=La modification d'une classe m\u00e9tier peut \u00eatre une modification au niveau de son nom mais aussi des attributs qu'elle contient. Une classe m\u00e9tier doit avoir au minimum deux attributs. Le bouton " Cr\u00e9er un attribut " permet de rajouter un attibut. Pour des besoins de simplicit\u00e9, une classe doit avoir une seule cl\u00e9 primaire et une seule description comme attribut. Le type de la cl\u00e9 est "int" et le type de la description est "String ". Apr\u00e8s l'ajout des attributs, il faudra avoir exactement deux attributs ayant chacune une encoche verte. Tous les autres attributs sont en rouge. Le bouton "Retour au Menu" permet de retourner au menu de la gestion des classes m\u00e9tiers. Le bouton " Modifier la classe " permet de modifier la classe. 
+pluginwizard_modify_business_class.pageHelp=La modification d'une classe m\u00e9tier peut \u00eatre une modification au niveau de son nom mais aussi des attributs qu'elle contient. Une classe m\u00e9tier doit avoir au minimum deux attributs. Le bouton " Cr\u00e9er un attribut " permet de rajouter un attibut. Pour des besoins de simplicit\u00e9, une classe doit avoir une seule cl\u00e9 primaire et une seule description comme attribut. Le type de la cl\u00e9 est "int" et le type de la description est "String ". Apr\u00e8s l'ajout des attributs, il faudra avoir exactement deux attributs ayant chacune une encoche verte. Tous les autres attributs sont en rouge. Le bouton "Retour" permet de retourner au menu de la gestion des classes m\u00e9tiers. Le bouton " Modifier la classe " permet de modifier la classe. 
 
 pluginwizard_manage_plugin_applications.labelCreationStep=Cr\u00e9ation
 pluginwizard_manage_plugin_applications.labelDescriptionStep=Description
